# mulambda

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.client  Dockerfile.companion  Dockerfile.dummy  LICENSE  Makefile  README.md  example_usecase.py  model_matching.py  model_registry.py  pyproject.toml  requirements.txt  settings.toml  setup.cfg
k8s/: backend-model.yaml  client.yaml  dragonfly.yaml  dummy-model.yaml  dummy.yaml  experiment.yaml  infra.yaml  minio.yaml  model.yaml  mulambda.yaml  namespace.yaml  selector.yaml
k8s/backend-model/: values.yaml
k8s/backend-model/templates/: model.yaml
k8s/cluster/: client.yaml  infra.yaml
k8s/cluster/backend-model/: values.yaml
k8s/cluster/backend-model/templates/: model.yaml
k8s/cluster/minio/: localpvc.yaml  minio.yaml
k8s/eb-cluster/: client.yaml  mulambda.yaml
k8s/eb-cluster/backend-model/: Chart.yaml
k8s/eb-cluster/backend-model/templates/: model.yaml
k8s/local/: client.yaml  mulambda.yaml
k8s/local/minio/: minio.yaml
ls-extension/mulambda/: .gitignore  README.md  setup.cfg
ls-extension/mulambda/mulambda/: __init__.py  extension.py
mulambda/: config.py  context.py  eval.py  example_usecase.py  util.py
mulambda/api/: app.py  cli.py  client.py  companion.py  dummy.py  example.py  experiment.py  galileo.py  selector.py  serve.py  test.py
mulambda/backends/: debug.py  pod.py
mulambda/infra/: base_model.py  client_api.py  ingress.py  selector.py  traits.py
mulambda/local/: executor.py
mulambda/models/: debug.py  executor.py  inference.py  matching.py  openai.py  registry.py  translator.py
mulambda/openai/: executor.py  models.py
tests/: test_selection.py
