[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mulambda"
authors = [
    { name = "Silvio Vasiljevic", email = "silvio.vasiljevic@gmail.com" }
]
dynamic = ["version"]
description = "A Serverless Platform for Automated Machine Learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "typer[all]",
    "openai",
    "dynaconf",
    "ray[serve]",
    "transformers",
    "httpx",
    "torch"
]

[project.optional-dependencies]
dev = ["pytest",
    "black",
    "ruff",
    "pre-commit"
]

[project.scripts]
mulambda = "mulambda.api.cli:app"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["mulambda*"]
exclude = ["assets*", "tests*"]

[tool.setuptools.dynamic]
version = { attr = "mulambda.__version__" }

[tool.ruff]
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "I001"]
target-version = "py310"
