[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mulambda"
authors = [
    { name = "Silvio Vasiljevic", email = "silvio.vasiljevic@gmail.com" }
]
dynamic = ["version"]
description = "A Serverless Platform for Automated Machine Learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dynaconf",
    "httpx",
    "fastapi",
    "typer",
    "uvicorn[standard]",
    "numpy",
    "kubernetes",
    "redis[hiredis]"
]

[project.optional-dependencies]
dev = ["pytest",
    "black[d]",
    "ruff",
    "pre-commit"
]

[project.scripts]
mulambda-companion = "mulambda.api.companion:app"
mulambda-experiment = "mulambda.api.experiment:app"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["mulambda*"]
exclude = ["assets*", "tests*"]

[tool.setuptools.dynamic]
version = { attr = "mulambda.__version__" }

[tool.ruff]
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "I001"]
target-version = "py310"
