[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mulambda"
authors = [
    { name = "Silvio Vasiljevic", email = "silvio.vasiljevic@gmail.com" }
]
dynamic = ["version"]
description = "A Serverless Platform for Automated Machine Learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dynaconf>=3.2",
    "httpx>=0.24",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "redis[hiredis]>=4.6",
]

[project.optional-dependencies]
dev = ["pytest",
    "black[d]",
    "ruff",
    "pre-commit"
]

[project.scripts]
mulambda-companion = "mulambda.api.companion:run"
mulambda-experiment = "mulambda.api.experiment:run"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["mulambda*"]
exclude = ["assets*", "tests*"]

[tool.setuptools.dynamic]
version = { attr = "mulambda.__version__" }

[tool.ruff]
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "I001"]
target-version = "py310"
