[metadata]
name = mulambda
version = attr: mulambda.__version__
description = A Serverless Platform for Automated Machine Learning
long_description = file: README.md
url = https://github.com/silv-io/mulambda
author = Silvio Vasiljevic
license = MIT


[options]
packages = find:
install_requires =
    numpy
    typer

[options.extras_require]
dev =
    pytest
    black
    ruff

[options.entry_points]
console_scripts =
    mulambda = mulambda.api.serve:app