[metadata]
name = mulambda
version = 0.1.0
url = https://github.com/silv-io/mulambda
author = Silvio Vasiljevic
author_email = silvio.vasiljevic@gmail.com
description = A Serverless AutoML Platform
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=1.4

[options.entry_points]
localstack.extensions =
    mulambda = mulambda.extension:MuLambdaExtension
